<package>
  <name>p3dx_apps</name>
  <maintainer email="hugo.costelha@ipleiria.com">Hugo Costelha</maintainer>
  <description>
     p3dx_apps
  </description>
  <version>2.0.0</version>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
      
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
</package>
